--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,47 @@ next-env.d.ts
 *.swo
 
 # OS generated files
-Thumbs.db 
+Thumbs.db
+.DS_Store
+ehthumbs.db
+
+# MongoDB
+*.mongodb
+mongodb-data/
+dump/
+mongodump/
+
+# Prisma
+/prisma/dev.db
+/prisma/dev.db-journal
+/prisma/migrations/
+
+# Logs
+logs
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Cache directories
+.npm
+.eslintcache
+.cache
+.parcel-cache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variable files
+.env.development.local
+.env.test.local
+.env.production.local
